--- a/style.css
+++ b/style.css
@@ -5,17 +5,8 @@ box-sizing: border-box;
 }
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    /* background: url(bg.jpg);
-    background-repeat: no-repeat; */
     background: #e1e1df;
-    /* color: azure; */
 }
-/* .color{
-    color: black;
-    padding: 20px;
-    margin: 210px;
-
-} */
 h2{
     color: black;
     padding: 100px;
@@ -23,17 +14,16 @@ h2{
     font-size: 50px;
     /* margin: 120px; */
 }
-.container{
+.container, .to-dos{
     /* position:relative; */
     /* margin-top: 50%; */
     border-radius: 20px;
     padding: 20px;
     width: 30%;
-    margin: 20px;
+    margin: 15px;
     /* margin: 210px; */
     margin-left: 540px;
-    /* align-items: center; */
-    /* display:inherit; */
+
     border: 1px solid #000;
     color: #fff;
     background: #0c101c;
@@ -41,18 +31,16 @@ h2{
     box-shadow: 10px 10px 5px grey;
     
 }
-.container ul{
+/* .container ul{
     list-style: none;
     margin: 16px ;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
     /* display: list-item; */
-    line-height: 40px;
+    /* line-height: 40px; */
     /* float: left; */
-}
-/* .container li{
-    float: right;
-} */
+/* }  */
+
 .container .text{
     width: 60%;
     height: 30px;
@@ -91,26 +79,35 @@ input:focus {
     border: 1px solid green;
     box-shadow: 3px 3px 2px greenyellow;
 }
-.container li a{
+.paragraph-styling {
+    margin: 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.to-dos {
+    margin-top: 25px;
+}
+/* .container li a{
     text-decoration: none;
     color: #e1e1df;
     margin-left: 250px;
     font-weight: 300;
     font-size: 20px;
     float: right;
-}
-.container li a:hover{
+} */
+/* .container li a:hover{
     color: red;
-    /* font-size: 25px; */
-}
+   
+} */
 
-.error{
+/* .error{
     color: red;
     margin-left: 15px;
     margin-top: 10px;
-    /* float: inline-end; */
+    
     padding: 20px;
-}
+} */
 /* Style the close button */
 /* .close {
     position: absolute;
